--- a/examples/CR_Ar/database/utils/rates_write.ipynb
+++ b/examples/CR_Ar/database/utils/rates_write.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "### Collisional-radiative model for Argon Plasma\n",
-    "#### Rates reading\n",
+    "#### Rates writing in Plato format\n",
     "See: https://doi.org/10.1063/1.3585688"
    ]
   },
@@ -19,7 +19,6 @@
    "source": [
     "import os\n",
     "import sys\n",
-    "import json\n",
     "import tqdm\n",
     "import numpy as np\n",
     "import dill as pickle"
@@ -28,16 +27,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "eb236bf1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import tensorflow as tf"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "cead3ae8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "dab0a1be",
    "metadata": {},
    "outputs": [],
@@ -66,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "7fa29e71",
    "metadata": {},
    "outputs": [],
@@ -86,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "560b28d5",
    "metadata": {},
    "outputs": [],
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "425f79ba",
    "metadata": {},
    "outputs": [],
@@ -181,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "532473a4",
    "metadata": {},
    "outputs": [],
