--- a/examples/CR_Ar/database/utils/rates_read.ipynb
+++ b/examples/CR_Ar/database/utils/rates_read.ipynb
@@ -175,7 +175,7 @@
     "  \"equation\": \"Ar(*)+em=Ar(*)+em\"\n",
     "}\n",
     "kin[\"EXh\"] = {\n",
-    "  \"plato_id\": 5,\n",
+    "  \"plato_id\": 6,\n",
     "  \"values\": read_exc(\"K\"),\n",
     "  \"equation\": \"Ar(*)+Ar(0)=Ar(*)+Ar(0)\"\n",
     "}\n",
@@ -234,7 +234,7 @@
     "kin[\"Ih\"] = {\n",
     "  \"plato_id\": 8,\n",
     "  \"values\": read_ion(\"V\"),\n",
-    "  \"equation\": \"Ar(*)+Ar(0)=Arp(*)+em+Ar(0)\"\n",
+    "  \"equation\": \"Ar(*)+Ar(0)=Arp(*)+Ar(0)+em\"\n",
     "}"
    ]
   },
