--- a/examples/CR_Ar/database/utils/rates_write.ipynb
+++ b/examples/CR_Ar/database/utils/rates_write.ipynb
@@ -161,7 +161,7 @@
    "outputs": [],
    "source": [
     "text = \"Units=m^3/s\\n\"\n",
-    "for k in (\"EXe\", \"EXh\", \"Ie\", \"Ih\"):\n",
+    "for k in (\"EXh\", \"EXe\", \"Ih\", \"Ie\"):\n",
     "  kin[k][\"param\"] = chem_eq.get_param(kin[k][\"equation\"])\n",
     "  text += write_rates(kin[k])\n",
     "with open(out_path + \"/argon_kapper\", 'w') as f:\n",
