--- a/ronek/plasmas/test.ipynb
+++ b/ronek/plasmas/test.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
   },
@@ -50,18 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p0, T0, T = 1e2, 3e2, 3e4\n",
-    "w, rho = model.get_init_composition(p0, T0, noise=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.geomspace(1e-12, 1e0, 499)\n",
-    "t = np.insert(t, 0, 0)"
+    "sol_ref = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/run/CR_Ar/output_box\""
    ]
   },
   {
@@ -70,18 +60,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y0 = np.concatenate([w, np.array(T).reshape(1), np.array(T0).reshape(1)])\n",
-    "y0, rho"
+    "columns = \"t X_em X_Ar X_Arp Th Te rho p n E\".split()\n",
+    "box = np.loadtxt(sol_ref + \"/box.dat\")\n",
+    "box = pd.DataFrame(box, columns=columns)\n",
+    "box"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t = box[\"t\"].values\n",
+    "rho, Th0, Te0 = [box[k][0] for k in (\"rho\", \"Th\", \"Te\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_pop(name):\n",
+    "  ni_gi  = np.loadtxt(sol_ref + f\"/pop_{name}.dat\", comments=\"&\", skiprows=2)[:,1]\n",
+    "  levels = model.mix.species[name].lev\n",
+    "  nb_pts = len(ni_gi) / len(levels[\"g\"])\n",
+    "  ni_gi  = np.stack(np.split(ni_gi, nb_pts, axis=0), axis=0)\n",
+    "  return ni_gi * levels[\"g\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
+    "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
+    "n = np.hstack([n[k] for k in model.species_order]).T\n",
+    "w_true = model.mix.get_w(rho, n)\n",
+    "T_true = box[[\"Th\", \"Te\"]].values.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y0 = np.zeros(model.nb_eqs)\n",
+    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
+    "y0[-2] = Th0\n",
+    "y0[-1] = Te0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "y = model.solve(t, y0, rho)\n",
-    "y"
+    "w_pred = y[:model.mix.nb_comp]\n",
+    "T_pred = y[model.mix.nb_comp:]"
    ]
   },
   {
@@ -90,7 +132,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.semilogx(t, y[-2:].T)"
+    "err = []\n",
+    "for i in range(2):\n",
+    "  ierr = np.mean(np.abs((T_true[i] - T_pred[i])/T_true[i]))\n",
+    "  err.append(ierr)\n",
+    "  plt.loglog(t[1:], T_true[i][1:])\n",
+    "  plt.loglog(t[1:], T_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "print(\"T\")\n",
+    "print(np.mean(err))\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -99,7 +150,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.loglog(t, y[:31].T)"
+    "err = []\n",
+    "for i in range(2):\n",
+    "  ierr = np.mean(np.abs((T_true[i] - T_pred[i])/T_true[i]))\n",
+    "  err.append(ierr)\n",
+    "  plt.semilogx(t[1:], T_true[i][1:])\n",
+    "  plt.semilogx(t[1:], T_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "print(\"T\")\n",
+    "print(np.mean(err))\n",
+    "plt.show()\n",
+    "plt.close()"
    ]
   },
   {
@@ -108,16 +168,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.loglog(t, y[31:33].T)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.loglog(t, y[-3].T)"
+    "for s in model.mix.species.values():\n",
+    "  print(s.name)\n",
+    "  err = []\n",
+    "  for i in s.indices:\n",
+    "    ierr = np.mean(np.abs((w_true[i] - w_pred[i])/w_true[i]))\n",
+    "    err.append(ierr)\n",
+    "    plt.loglog(t[1:], w_true[i][1:])\n",
+    "    plt.loglog(t[1:], w_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "  print(np.mean(err))\n",
+    "  plt.show()\n",
+    "  plt.close()"
    ]
   }
  ],
