--- a/examples/CR_Ar/database/utils/rates_write.ipynb
+++ b/examples/CR_Ar/database/utils/rates_write.ipynb
@@ -148,29 +148,51 @@
     "  string = \"\"\n",
     "  for p in ARR_PARAM:\n",
     "    value = reaction[\"values\"][p][tuple(indices)]\n",
-    "    value = 0 if (value < 1e-99) else value\n",
-    "    string += \"%.8E,\" % value\n",
+    "    string += \"%.12E,\" % value\n",
     "  return string[:-1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "8ee08001",
+   "execution_count": 7,
+   "id": "e25b94b6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = \"Units=m^3/s\\n\"\n",
-    "for k in (\"EXh\", \"EXe\", \"Ih\", \"Ie\"):\n",
-    "  kin[k][\"param\"] = chem_eq.get_param(kin[k][\"equation\"])\n",
-    "  text += write_rates(kin[k])\n",
-    "with open(out_path + \"/argon_kapper\", 'w') as f:\n",
-    "  f.write(text)"
+    "filename = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/database/kinetics/\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "8ee08001",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "> Process '6': 100%|███████████████████████| 442/442 [00:00<00:00, 96747.85it/s]\n",
+      "> Process '7': 100%|██████████████████████| 465/465 [00:00<00:00, 129514.00it/s]\n",
+      "> Process '8': 100%|█████████████████████████| 31/31 [00:00<00:00, 96313.65it/s]\n",
+      "> Process '9': 100%|█████████████████████████| 31/31 [00:00<00:00, 98801.99it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "text = \"Units=m^3/s\\n\"\n",
+    "# for k in (\"EXh\", \"Ih\", \"Ie\"):\n",
+    "for k in (\"EXh\", \"EXe\", \"Ih\", \"Ie\"):\n",
+    "  kin[k][\"param\"] = chem_eq.get_param(kin[k][\"equation\"])\n",
+    "  text += write_rates(kin[k])\n",
+    "# with open(out_path + \"/argon_kapper\", 'w') as f:\n",
+    "with open(filename + \"/argon_kapper\", 'w') as f:\n",
+    "  f.write(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "532473a4",
    "metadata": {},
    "outputs": [],
