--- a/examples/CR_Ar/database/utils/rates_fit.ipynb
+++ b/examples/CR_Ar/database/utils/rates_fit.ipynb
@@ -58,7 +58,8 @@
    "outputs": [],
    "source": [
     "path_to_kin = \"./../rates/kin_raw.p\"\n",
-    "path_to_rad = \"./../rates/rad_raw.p\""
+    "path_to_rad = \"./../rates/rad_raw.p\"\n",
+    "fit_coll_int = False"
    ]
   },
   {
@@ -223,17 +224,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7c8c33aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "param = sp.optimize.leastsq(\n",
-    "  func=lambda c: coll_rate_en_ln_data(kin_raw) - coll_rate_en_ln(T, c),\n",
-    "  x0=kin_raw[\"EN\"][\"Q11_fit\"],\n",
-    "  maxfev=int(1e5)\n",
-    ")\n",
-    "kin_fit[\"EN\"][\"Q11_fit\"] = param[0]"
+    "if fit_coll_int:\n",
+    "  param = sp.optimize.leastsq(\n",
+    "    func=lambda c: coll_rate_en_ln_data(kin_raw) - coll_rate_en_ln(T, c),\n",
+    "    x0=kin_raw[\"EN\"][\"Q11_fit\"],\n",
+    "    maxfev=int(1e5)\n",
+    "  )\n",
+    "  kin_fit[\"EN\"][\"Q11_fit\"] = param[0]"
    ]
   },
   {
