--- a/ronek/plasmas/test.ipynb
+++ b/ronek/plasmas/test.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
+    "import torch\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
@@ -19,7 +20,9 @@
    "outputs": [],
    "source": [
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
-    "from ronek.plasmas import ArgonCR"
+    "from ronek import env\n",
+    "from ronek.plasmas import ArgonCR\n",
+    "import ronek.backend as bkd"
    ]
   },
   {
@@ -28,12 +31,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/CR_Ar/database\""
+    "env_opts = {\n",
+    "  \"backend\": \"numpy\",\n",
+    "  \"device\": \"cpu\",\n",
+    "  \"device_idx\": 0,\n",
+    "  \"nb_threads\": 8,\n",
+    "  \"epsilon\": 1e-10,\n",
+    "  \"floatx\": \"float64\"\n",
+    "}\n",
+    "env.set(**env_opts)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_to_dtb = \"/home/zanardi/Codes/ML/RONEK/ronek/examples/CR_Ar/database\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +76,226 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>X_em</th>\n",
+       "      <th>X_Ar</th>\n",
+       "      <th>X_Arp</th>\n",
+       "      <th>Th</th>\n",
+       "      <th>Te</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>p</th>\n",
+       "      <th>n</th>\n",
+       "      <th>E</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>1.000000e-14</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.000000e-14</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>300.000000</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>100000.000000</td>\n",
+       "      <td>2.414324e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1.000000e-10</td>\n",
+       "      <td>1.925875e-09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>1.925875e-09</td>\n",
+       "      <td>29999.987847</td>\n",
+       "      <td>0.025542</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>99999.959488</td>\n",
+       "      <td>2.414324e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2.015000e-10</td>\n",
+       "      <td>3.898112e-09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>3.898112e-09</td>\n",
+       "      <td>29999.975513</td>\n",
+       "      <td>0.053376</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>99999.918376</td>\n",
+       "      <td>2.414324e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3.045225e-10</td>\n",
+       "      <td>5.917557e-09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>5.917557e-09</td>\n",
+       "      <td>29999.962993</td>\n",
+       "      <td>0.086507</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>99999.876644</td>\n",
+       "      <td>2.414324e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4.090903e-10</td>\n",
+       "      <td>7.985314e-09</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>7.985314e-09</td>\n",
+       "      <td>29999.950284</td>\n",
+       "      <td>0.124765</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>99999.834280</td>\n",
+       "      <td>2.414324e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>797</th>\n",
+       "      <td>9.491642e-04</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>0.759297</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>44142.732052</td>\n",
+       "      <td>2.744646e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>798</th>\n",
+       "      <td>9.634018e-04</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>0.759297</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>44142.732052</td>\n",
+       "      <td>2.744646e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>799</th>\n",
+       "      <td>9.778529e-04</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>0.759297</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>44142.732052</td>\n",
+       "      <td>2.744646e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>800</th>\n",
+       "      <td>9.925208e-04</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>0.759297</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>44142.732052</td>\n",
+       "      <td>2.744646e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>801</th>\n",
+       "      <td>1.000000e-03</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>0.759297</td>\n",
+       "      <td>1.203514e-01</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>11649.027101</td>\n",
+       "      <td>0.016015</td>\n",
+       "      <td>44142.732052</td>\n",
+       "      <td>2.744646e+23</td>\n",
+       "      <td>9.365946e+06</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>802 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                t          X_em      X_Ar         X_Arp            Th  \\\n",
+       "0    0.000000e+00  1.000000e-14  1.000000  1.000000e-14  30000.000000   \n",
+       "1    1.000000e-10  1.925875e-09  1.000000  1.925875e-09  29999.987847   \n",
+       "2    2.015000e-10  3.898112e-09  1.000000  3.898112e-09  29999.975513   \n",
+       "3    3.045225e-10  5.917557e-09  1.000000  5.917557e-09  29999.962993   \n",
+       "4    4.090903e-10  7.985314e-09  1.000000  7.985314e-09  29999.950284   \n",
+       "..            ...           ...       ...           ...           ...   \n",
+       "797  9.491642e-04  1.203514e-01  0.759297  1.203514e-01  11649.027101   \n",
+       "798  9.634018e-04  1.203514e-01  0.759297  1.203514e-01  11649.027101   \n",
+       "799  9.778529e-04  1.203514e-01  0.759297  1.203514e-01  11649.027101   \n",
+       "800  9.925208e-04  1.203514e-01  0.759297  1.203514e-01  11649.027101   \n",
+       "801  1.000000e-03  1.203514e-01  0.759297  1.203514e-01  11649.027101   \n",
+       "\n",
+       "               Te       rho              p             n             E  \n",
+       "0      300.000000  0.016015  100000.000000  2.414324e+23  9.365946e+06  \n",
+       "1        0.025542  0.016015   99999.959488  2.414324e+23  9.365946e+06  \n",
+       "2        0.053376  0.016015   99999.918376  2.414324e+23  9.365946e+06  \n",
+       "3        0.086507  0.016015   99999.876644  2.414324e+23  9.365946e+06  \n",
+       "4        0.124765  0.016015   99999.834280  2.414324e+23  9.365946e+06  \n",
+       "..            ...       ...            ...           ...           ...  \n",
+       "797  11649.027101  0.016015   44142.732052  2.744646e+23  9.365946e+06  \n",
+       "798  11649.027101  0.016015   44142.732052  2.744646e+23  9.365946e+06  \n",
+       "799  11649.027101  0.016015   44142.732052  2.744646e+23  9.365946e+06  \n",
+       "800  11649.027101  0.016015   44142.732052  2.744646e+23  9.365946e+06  \n",
+       "801  11649.027101  0.016015   44142.732052  2.744646e+23  9.365946e+06  \n",
+       "\n",
+       "[802 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "columns = \"t X_em X_Ar X_Arp Th Te rho p n E\".split()\n",
     "box = np.loadtxt(sol_ref + \"/box.dat\")\n",
@@ -68,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,20 +324,7 @@
     "  levels = model.mix.species[name].lev\n",
     "  nb_pts = len(ni_gi) / len(levels[\"g\"])\n",
     "  ni_gi  = np.stack(np.split(ni_gi, nb_pts, axis=0), axis=0)\n",
-    "  return ni_gi * levels[\"g\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
-    "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
-    "n = np.hstack([n[k] for k in model.species_order]).T\n",
-    "w_true = model.mix.get_w(rho, n)\n",
-    "T_true = box[[\"Th\", \"Te\"]].values.T"
+    "  return ni_gi * levels[\"g\"].numpy()"
    ]
   },
   {
@@ -109,10 +333,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
+    "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
+    "n = np.hstack([n[k] for k in model.species_order]).T\n",
+    "w_true = model.mix.get_w(rho, bkd.to_torch(n)).numpy()\n",
+    "T_true = box[[\"Th\", \"Te\"]].values.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
     "y0[:model.mix.nb_comp] = w_true[:,0]\n",
     "y0[-2] = Th0\n",
-    "y0[-1] = Te0"
+    "y0[-1] = Te0\n",
+    "y0 = bkd.to_torch(y0)"
    ]
   },
   {
