--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -9,6 +9,7 @@
     "import sys\n",
     "import torch\n",
     "import numpy as np\n",
+    "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt"
    ]
@@ -21,6 +22,7 @@
    "source": [
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
     "from ronek import env\n",
+    "from ronek import const\n",
     "from ronek.plasmas import ArgonCR\n",
     "import ronek.backend as bkd"
    ]
@@ -35,8 +37,8 @@
     "  \"backend\": \"numpy\",\n",
     "  \"device\": \"cpu\",\n",
     "  \"device_idx\": 0,\n",
-    "  \"nb_threads\": 8,\n",
-    "  \"epsilon\": 1e-10,\n",
+    "  \"nb_threads\": 2,\n",
+    "  \"epsilon\": None,\n",
     "  \"floatx\": \"float64\"\n",
     "}\n",
     "env.set(**env_opts)"
@@ -60,8 +62,7 @@
     "model = ArgonCR(\n",
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
-    "  use_coll_int_fit=True,\n",
-    "  use_pe=True\n",
+    "  use_coll_int_fit=True\n",
     ")"
    ]
   },
@@ -118,8 +119,7 @@
    "source": [
     "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
     "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
-    "n = np.hstack([n[k] for k in model.species_order]).T\n",
-    "w_true = model.mix.get_w(rho, bkd.to_torch(n)).numpy()\n",
+    "n_true = np.hstack([n[k] for k in model.species_order]).T\n",
     "T_true = box[[\"Th\", \"Te\"]].values.T"
    ]
   },
@@ -130,47 +130,19 @@
    "outputs": [],
    "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
+    "y0[:model.mix.nb_comp] = n_true[:,0]\n",
     "y0[-2] = Th0\n",
-    "y0[-1] = Te0\n",
-    "y0 = bkd.to_torch(y0)"
+    "y0[-1] = Te0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model._fun(0.0, y0, rho)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "jac = torch.func.jacrev(model._fun, argnums=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "j = jac(0.0, y0, rho)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = model.solve(t, y0, rho)\n",
-    "w_pred = y[:model.mix.nb_comp]\n",
+    "y = model.solve(t, y0)\n",
+    "n_pred = y[:model.mix.nb_comp]\n",
     "T_pred = y[model.mix.nb_comp:]"
    ]
   },
@@ -220,10 +192,10 @@
     "  print(s.name)\n",
     "  err = []\n",
     "  for i in s.indices:\n",
-    "    ierr = np.mean(np.abs((w_true[i] - w_pred[i])/w_true[i]))\n",
+    "    ierr = np.mean(np.abs((n_true[i] - n_pred[i])/n_true[i]))\n",
     "    err.append(ierr)\n",
-    "    plt.loglog(t[1:], w_true[i][1:])\n",
-    "    plt.loglog(t[1:], w_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
+    "    plt.loglog(t[1:], n_true[i][1:])\n",
+    "    plt.loglog(t[1:], n_pred[i][1:], ls=\"--\", color=plt.gca().lines[-1].get_color())\n",
     "  print(np.mean(err))\n",
     "  plt.show()\n",
     "  plt.close()"
