--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -72,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sol_ref = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/MT/run/CR_Ar/output_box\""
+    "sol_ref = \"/home/zanardi/Workspace/AirDatabase/ThermoChemModels/StS/argon/testcase/output_box\""
    ]
   },
   {
@@ -120,30 +120,43 @@
     "n = {k: read_pop(k) for k in (\"Ar\", \"Arp\")}\n",
     "n[\"em\"] = (box[\"X_em\"] * box[\"n\"]).values.reshape(-1,1)\n",
     "n_true = np.hstack([n[k] for k in model.species_order]).T\n",
+    "w_true = model.mix.get_rho(bkd.to_torch(n_true)).numpy() / rho\n",
     "T_true = box[[\"Th\", \"Te\"]].values.T"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "y0[:model.mix.nb_comp] = n_true[:,0]\n",
+    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
     "y0[-2] = Th0\n",
-    "y0[-1] = Te0"
+    "y0[-1] = model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
+    "y0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = model.solve(t, y0)\n",
-    "n_pred = y[:model.mix.nb_comp]\n",
-    "T_pred = y[model.mix.nb_comp:]"
+    "y, runtime = model.solve_fom(t, y0, rho)\n",
+    "runtime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w_pred = y[:model.mix.nb_comp]\n",
+    "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
+    "T_pred = y[model.mix.nb_comp:]\n",
+    "T_pred[-1] = model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
    ]
   },
   {
