--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -21,10 +21,10 @@
    "outputs": [],
    "source": [
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
-    "from ronek import env\n",
-    "from ronek import const\n",
-    "from ronek.plasmas import ArgonCR\n",
-    "import ronek.backend as bkd"
+    "from ronek2 import env\n",
+    "from ronek2 import const\n",
+    "from ronek2.system import ArgonCR\n",
+    "import ronek2.backend as bkd"
    ]
   },
   {
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
