--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -23,8 +23,10 @@
     "sys.path.append(\"/home/zanardi/Codes/ML/RONEK/ronek/\")\n",
     "from ronek2 import env\n",
     "from ronek2 import const\n",
-    "from ronek2.system import ArgonCR\n",
-    "import ronek2.backend as bkd"
+    "from ronek2.roms import CoBRAS\n",
+    "from ronek2 import backend as bkd\n",
+    "from ronek2.systems import ArgonCR\n",
+    "from ronek2.systems.equilibrium import Equilibrium"
    ]
   },
   {
@@ -62,8 +64,10 @@
     "model = ArgonCR(\n",
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
-    "  use_coll_int_fit=True\n",
-    ")"
+    "  use_coll_int_fit=True,\n",
+    "  isothermal=False\n",
+    ")\n",
+    "model.set_output(max_mom=2, linear=True)"
    ]
   },
   {
@@ -130,10 +134,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "p = box[\"p\"].values[-1]\n",
+    "T = box[\"Th\"].values[-1]\n",
+    "neq = model.compute_eq_comp(torch.tensor(p), torch.tensor(T)).numpy()\n",
+    "p, T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
+    "y0[:model.mix.nb_comp] = n_true[:,0] / const.UNA\n",
     "y0[-2] = Th0\n",
-    "y0[-1] = model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
+    "y0[-1] = Te0 if model.isothermal else model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
     "y0"
    ]
   },
@@ -149,14 +165,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "w_pred = y[:model.mix.nb_comp]\n",
-    "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
+    "# w_pred = y[:model.mix.nb_comp]\n",
+    "# n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
+    "n_pred = y[:model.mix.nb_comp] * const.UNA\n",
     "T_pred = y[model.mix.nb_comp:]\n",
-    "T_pred[-1] = model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
+    "T_pred[-1] = T_pred[-1] if model.isothermal else model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neq = n_pred[:,-1]\n",
+    "Teq = T_pred[-1,-1]\n",
+    "peq = np.sum(neq) * const.UKB * Teq\n",
+    "neq_pred = model.compute_eq_comp(torch.tensor(peq), torch.tensor(Teq)).numpy()"
    ]
   },
   {
@@ -212,6 +241,178 @@
     "  print(np.mean(err))\n",
     "  plt.show()\n",
     "  plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq = Equilibrium(mixture=model.mix, clipping=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neq = n_pred[:,-1]\n",
+    "Teq = T_pred[-1,-1]\n",
+    "peq = np.sum(neq) * const.UKB * Teq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rhoeq = model.mix.m @ neq\n",
+    "rhoeq.numpy(), rho"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rhoeq.numpy(), Teq, Teq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq.from_prim(rhoeq.numpy(), Teq, Teq)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(eq.from_prim(rhoeq.numpy(), Teq, Teq) - neq)/neq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rom = CoBRAS(\n",
+    "  system=model,\n",
+    "  quadrature=None,\n",
+    "  path_to_saving=\"./\",\n",
+    "  saving=True,\n",
+    "  verbose=True\n",
+    ")\n",
+    "rom.build_sol_interp(t, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tm = -np.flip(t[:-600])\n",
+    "tm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g0 = np.zeros_like(model.C[0])\n",
+    "g0[2] = 1.0\n",
+    "y = sp.integrate.solve_ivp(\n",
+    "  fun=rom.adjoint_fun,\n",
+    "  t_span=[tm[0],tm[-1]],\n",
+    "  y0=g0,\n",
+    "  method=\"LSODA\",\n",
+    "  t_eval=tm,\n",
+    "  first_step=1e-14,\n",
+    "  rtol=1e-6,\n",
+    "  atol=1e-10,\n",
+    "  jac=rom.adjoint_jac\n",
+    ").y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rom.adjoint_fun(t[-1], model.C[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = model.jac(t[-1], y[:,-1])\n",
+    "np.savetxt(\"jac.txt\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = rom.adjoint_jac(t[-1], model.C[0])\n",
+    "np.savetxt(\"jac.txt\", x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i, g0 in enumerate(model.C):\n",
+    "  print(f\"Solving {i}\")\n",
+    "  g = rom.solve_adjoint(np.flip(t), g0)\n",
+    "  print(g)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot()"
    ]
   }
  ],
