--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -254,13 +254,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeq = y[:,-1]\n",
+    "yeq[:-2] *= const.UNA\n",
+    "yeq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.mix.update(torch.tensor(y[:-2,0])*const.UNA, torch.tensor(y[-2,0]), torch.tensor(y[-1,0]))\n",
+    "e = model.mix.e\n",
+    "e.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model.mix.update(torch.tensor(yeq[:-2]), torch.tensor(yeq[-2]), torch.tensor(yeq[-1]))\n",
+    "e = model.mix.e\n",
+    "e.numpy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "neq = n_pred[:,-1]\n",
-    "Teq = T_pred[-1,-1]\n",
-    "peq = np.sum(neq) * const.UKB * Teq"
+    "rho = (model.mix.m @ neq).numpy()"
    ]
   },
   {
@@ -269,8 +301,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhoeq = model.mix.m @ neq\n",
-    "rhoeq.numpy(), rho"
+    "yeq_prim = eq.from_prim(rho, Teq, Teq)\n",
+    "yeq_prim"
    ]
   },
   {
@@ -279,7 +311,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rhoeq.numpy(), Teq, Teq"
+    "(yeq_prim - yeq)/yeq"
    ]
   },
   {
@@ -288,7 +320,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq.from_prim(rhoeq.numpy(), Teq, Teq)"
+    "yeq_cons = eq.from_cons(rho, e)\n",
+    "yeq_cons"
    ]
   },
   {
@@ -297,7 +330,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(eq.from_prim(rhoeq.numpy(), Teq, Teq) - neq)/neq"
+    "(yeq_cons - yeq)/yeq"
    ]
   },
   {
