--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -65,7 +65,7 @@
     "  species={k: path_to_dtb + \"/species/\" + k + \".json\" for k in (\"Ar\", \"Arp\", \"em\")},\n",
     "  kin_dtb=path_to_dtb + \"/rates/kin_fit.p\",\n",
     "  use_coll_int_fit=True,\n",
-    "  isothermal=False\n",
+    "  isothermal=True\n",
     ")\n",
     "model.set_output(max_mom=2, linear=True)"
    ]
@@ -165,7 +165,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "eq = Equilibrium(mixture=model.mix, clipping=True)"
+    "eq = Equilibrium(system=model, clipping=True)"
    ]
   },
   {
@@ -265,6 +274,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "neq = n_pred[:,-1]\n",
+    "rho = (model.mix.m @ neq).numpy()\n",
+    "model.mix.set_rho(rho)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -276,23 +296,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.mix.update(torch.tensor(yeq[:-2]), torch.tensor(yeq[-2]), torch.tensor(yeq[-1]))\n",
-    "e = model.mix.e\n",
-    "e.numpy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neq = n_pred[:,-1]\n",
-    "rho = (model.mix.m @ neq).numpy()"
+    "# model.mix.update(torch.tensor(yeq[:-2]), torch.tensor(yeq[-2]), torch.tensor(yeq[-1]))\n",
+    "# e = model.mix.e\n",
+    "# e.numpy()"
    ]
   },
   {
@@ -301,7 +311,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yeq_prim = eq.from_prim(rho, Teq, Teq)\n",
+    "rho, T_pred[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeq_prim = eq.from_prim(rho, *T_pred[:,-1])\n",
     "yeq_prim"
    ]
   },
@@ -331,6 +359,55 @@
    "outputs": [],
    "source": [
     "(yeq_cons - yeq)/yeq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fun = eq._from_prim_thermal_neq_fun\n",
+    "jac_exp = torch.func.jacrev(fun)\n",
+    "jac = torch.func.jacrev(model._fun, argnums=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yeq_c = torch.clone(torch.tensor(yeq))\n",
+    "yeq_c[:-2] /= const.UNA\n",
+    "yeq_c_log = torch.log(yeq_c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(jac(0.0, yeq_c)[:-2,:-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.diag(torch.exp(yeq_c)[:-2]) @ jac(0.0, yeq_c)[:-2,:-2] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "jac_exp(yeq_c_log)[:-2,:-2]"
    ]
   },
   {
@@ -447,6 +524,34 @@
    "source": [
     "plt.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = torch.rand(5)\n",
+    "A = torch.rand(5,5)\n",
+    "\n",
+    "fun = lambda z: A @ torch.exp(z)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
