--- a/trash/test.ipynb
+++ b/trash/test.ipynb
@@ -134,20 +134,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "p = box[\"p\"].values[-1]\n",
-    "T = box[\"Th\"].values[-1]\n",
-    "neq = model.compute_eq_comp(torch.tensor(p), torch.tensor(T)).numpy()\n",
-    "p, T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "y0 = np.zeros(model.nb_eqs)\n",
-    "y0[:model.mix.nb_comp] = n_true[:,0] / const.UNA\n",
+    "# y0[:model.mix.nb_comp] = n_true[:,0] / const.UNA\n",
+    "y0[:model.mix.nb_comp] = w_true[:,0]\n",
     "y0[-2] = Th0\n",
     "y0[-1] = Te0 if model.isothermal else model.mix.get_pe(Te=Te0, ne=n_true[-1,0])\n",
     "y0"
@@ -165,36 +154,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y[:,-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# w_pred = y[:model.mix.nb_comp]\n",
-    "# n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
-    "n_pred = y[:model.mix.nb_comp] * const.UNA\n",
+    "w_pred = y[:model.mix.nb_comp]\n",
+    "n_pred = model.mix.get_n(bkd.to_torch(w_pred)).numpy()\n",
+    "# n_pred = y[:model.mix.nb_comp] * const.UNA\n",
     "T_pred = y[model.mix.nb_comp:]\n",
     "T_pred[-1] = T_pred[-1] if model.isothermal else model.mix.get_Te(pe=T_pred[-1], ne=n_pred[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "neq = n_pred[:,-1]\n",
-    "Teq = T_pred[-1,-1]\n",
-    "peq = np.sum(neq) * const.UKB * Teq\n",
-    "neq_pred = model.compute_eq_comp(torch.tensor(peq), torch.tensor(Teq)).numpy()"
    ]
   },
   {
@@ -329,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yeq_prim = eq.from_prim(rho, *T_pred[:,-1])\n",
+    "yeq_prim = eq.from_prim_th_neq(rho, *T_pred[:,-1])\n",
     "yeq_prim"
    ]
   },
@@ -363,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
